# fastapi-many-to-many

./: .docker.env  .env  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
src/: main.py  settings.py
src/models/: __init__.py  authors.py  base.py  books.py  db.py  main.py  main_db.py  some_data.py
src/routers/: authors.py  base.py  books.py  root.py
src/schemas/: __init__.py  authors.py  books.py
src/scripts/: init_db.py  insert_some_data.py  select_some_data.py  serializing_some_data.py
src/services/: authors.py  books.py
