[tool.poetry]
name = "fastapi-many-to-many"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <y.orlov@fonmix.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
SQLAlchemy = "^1.4.41"
uvicorn = "^0.18.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
