[tool.poetry]
name = "fastapi-many-to-many"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <y.orlov@fonmix.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
fastapi = "^0.82.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
